avoid search icon covered by text

--- a/css/global.css
+++ b/css/global.css
@@ -15,4 +15,5 @@ html, body {
 
 #search-input {
     width: 400px;
+    padding-right: 35px;
 }
